// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IDV IDP Authenticator transformer Tests should add back to signin link 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idv.idp.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idv.idp.desc",
        },
        "type": "Description",
      },
      {
        "label": "oie.optional.authenticator.button.title",
        "options": {
          "isActionStep": false,
          "onClick": [Function],
          "step": "redirect-idverify",
          "type": "button",
        },
        "type": "Button",
      },
      {
        "type": "Divider",
      },
      {
        "contentType": "footer",
        "options": {
          "dataSe": "cancel",
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idv.idp.desc.termsOfUse",
          "variant": "subtitle1",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idv.idp.desc.agreement",
          "variant": "subtitle1",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDV IDP Authenticator transformer Tests should add correct title, descriptions, and button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idv.idp.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idv.idp.desc",
        },
        "type": "Description",
      },
      {
        "label": "oie.optional.authenticator.button.title",
        "options": {
          "isActionStep": false,
          "onClick": [Function],
          "step": "redirect-idverify",
          "type": "button",
        },
        "type": "Button",
      },
      {
        "type": "Divider",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idv.idp.desc.termsOfUse",
          "variant": "subtitle1",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idv.idp.desc.agreement",
          "variant": "subtitle1",
        },
        "type": "Description",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
